--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -7,6 +7,7 @@
     "consultations": "Consultations",
     "categories": "Categories",
     "payments": "Payments",
+    "questions": "الأسئلة",
     "logout": "Logout",
     "login": "Login",
     "email": "Email",
