--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -203,7 +203,52 @@
     "operationFailed": "Operation failed. Please try again.",
     "noData": "No data available",
     "loadingData": "Loading data...",
-    "errorLoadingData": "Error loading data"
+    "errorLoadingData": "Error loading data",
+    "create": "إنشاء",
+    "update": "تحديث",
+    "saving": "جاري الحفظ..."
+  },
+  "staticContent": {
+    "title": "إدارة المحتوى الثابت",
+    "subtitle": "إدارة سياسة الخصوصية والشروط ومحتوى المساعدة والمزيد",
+    "privacyPolicy": "سياسة الخصوصية",
+    "privacyPolicyDesc": "إدارة خصوصية المستخدم ومعلومات حماية البيانات",
+    "termsConditions": "الشروط والأحكام",
+    "termsConditionsDesc": "إدارة شروط الخدمة واتفاقيات المستخدم",
+    "help": "مركز المساعدة",
+    "helpDesc": "إدارة وثائق المساعدة ومحتوى الدعم",
+    "onboarding": "التوجيه",
+    "onboardingDesc": "إدارة محتوى الترحيب والبدء",
+    "about": "من نحن",
+    "aboutDesc": "إدارة معلومات الشركة ومحتوى صفحة من نحن",
+    "contact": "اتصل بنا",
+    "contactDesc": "إدارة معلومات الاتصال وتفاصيل الدعم",
+    "faq": "الأسئلة الشائعة",
+    "faqDesc": "إدارة الأسئلة المتكررة",
+    "createContent": "إنشاء محتوى",
+    "editContent": "تحرير المحتوى",
+    "allContent": "جميع المحتويات",
+    "noContent": "لا يوجد محتوى متاح",
+    "createFirstContent": "أنشئ أول محتوى للبدء",
+    "type": "النوع",
+    "version": "الإصدار",
+    "lastUpdated": "آخر تحديث",
+    "content": "المحتوى",
+    "seoTitle": "عنوان SEO",
+    "seoDescription": "وصف SEO",
+    "seoKeywords": "كلمات مفتاحية SEO",
+    "keywordsPlaceholder": "كلمة1، كلمة2، كلمة3",
+    "active": "نشط",
+    "preview": "معاينة",
+    "create": "إنشاء",
+    "edit": "تحرير",
+    "confirmDelete": "هل أنت متأكد من حذف هذا المحتوى؟",
+    "contentCreated": "تم إنشاء المحتوى بنجاح",
+    "contentUpdated": "تم تحديث المحتوى بنجاح",
+    "contentDeleted": "تم حذف المحتوى بنجاح",
+    "errorLoadingContent": "خطأ في تحميل المحتوى",
+    "errorSavingContent": "خطأ في حفظ المحتوى",
+    "errorDeletingContent": "خطأ في حذف المحتوى"
   }
 }
 
