--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -203,7 +203,52 @@
     "operationFailed": "Operation failed. Please try again.",
     "noData": "No data available",
     "loadingData": "Loading data...",
-    "errorLoadingData": "Error loading data"
+    "errorLoadingData": "Error loading data",
+    "create": "Create",
+    "update": "Update",
+    "saving": "Saving..."
+  },
+  "staticContent": {
+    "title": "Static Content",
+    "subtitle": "Manage privacy policy, terms, help content, and more",
+    "privacyPolicy": "Privacy Policy",
+    "privacyPolicyDesc": "Manage user privacy and data protection information",
+    "termsConditions": "Terms & Conditions",
+    "termsConditionsDesc": "Manage terms of service and user agreements",
+    "help": "Help Center",
+    "helpDesc": "Manage help documentation and support content",
+    "onboarding": "Onboarding",
+    "onboardingDesc": "Manage welcome and getting started content",
+    "about": "About Us",
+    "aboutDesc": "Manage company information and about page content",
+    "contact": "Contact",
+    "contactDesc": "Manage contact information and support details",
+    "faq": "FAQ",
+    "faqDesc": "Manage frequently asked questions",
+    "createContent": "Create Content",
+    "editContent": "Edit Content",
+    "allContent": "All Content",
+    "noContent": "No content available",
+    "createFirstContent": "Create your first content to get started",
+    "type": "Type",
+    "version": "Version",
+    "lastUpdated": "Last Updated",
+    "content": "Content",
+    "seoTitle": "SEO Title",
+    "seoDescription": "SEO Description",
+    "seoKeywords": "SEO Keywords",
+    "keywordsPlaceholder": "keyword1, keyword2, keyword3",
+    "active": "Active",
+    "preview": "Preview",
+    "create": "Create",
+    "edit": "Edit",
+    "confirmDelete": "Are you sure you want to delete this content?",
+    "contentCreated": "Content created successfully",
+    "contentUpdated": "Content updated successfully",
+    "contentDeleted": "Content deleted successfully",
+    "errorLoadingContent": "Error loading content",
+    "errorSavingContent": "Error saving content",
+    "errorDeletingContent": "Error deleting content"
   }
 }
 
